--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url(/img/mt.jpg);
+  background-image: url(/img/lol.jpeg);
   
   /* Add the blur effect */
   filter: blur(8px);
@@ -56,6 +56,6 @@ body, html {
   <h1 style="font-size:50px">Krnl</h1>
   <p>Download Krnl Today</p>
 </div>
-
+ 
 </body>
 </html>
