--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+   <script src="https://kit.fontawesome.com/115d1c505e.js" crossorigin="anonymous"></script>
 <style>
 body, html {
   height: 100%;
@@ -15,7 +16,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url(/img/lol.jpeg);
+  background-image: url("/img/lol.jpeg");
   
   /* Add the blur effect */
   filter: blur(8px);
@@ -56,6 +57,10 @@ body, html {
   <h1 style="font-size:50px">Krnl</h1>
   <p>Download Krnl Today</p>
 </div>
- 
+  <div class="download></div>
+        <a href="/Krnl/Krnl.exe" download>
+         <i class="fas fa-download fa-x5"></i>
+                          </a>
+           
 </body>
 </html>
