--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body, html {
 
 .bg-image {
   /* The image used */
-  background-image: url("/img/lol.jpeg");
+  background-image: url(/img/lol.jpg);
   
   /* Add the blur effect */
   filter: blur(8px);
