--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@ body, html {
   <h1 style="font-size:50px">Krnl</h1>
   <p>Download Krnl Today</p>
 </div>
-  <div class="download></div>
+  <div class="download"></div>
         <a href="/Krnl/Krnl.exe" download>
          <i class="fas fa-download fa-x5"></i>
                           </a>
+                                         </div>
            
 </body>
 </html>
