--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@ body, html {
 <div class="bg-text">
   <h1 style="font-size:50px">Krnl</h1>
   <p>Download Krnl Today</p>
-</div>
-  <div class="download"></div>
+  <br>
         <a href="/Krnl/Krnl.exe" download>
-         <i class="fas fa-download fa-x5"></i>
+         <i class="fas fa-download"></i>
                           </a>
                                          </div>
            
