--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@ body, html {
   padding: 20px;
   text-align: center;
 }
+   .download {
+   colo: white;
+      
+   }
 </style>
 </head>
 <body>
@@ -58,9 +62,11 @@ body, html {
   <h1 style="font-size:50px">Krnl</h1>
   <p>Download Krnl Today</p>
   <br>
+   <div class="download">
         <a href="/Krnl/Krnl.exe" download>
          <i class="fas fa-download"></i>
                           </a>
+   </div>
                                          </div>
            
 </body>
