--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@ body, html {
 
 * {
   box-sizing: border-box;
-}
-
+   
 .bg-image {
   /* The image used */
-  background-image: ("lol.jpg");
+  background-image: ("lol.png");
   
   /* Add the blur effect */
   filter: blur(8px);
