--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body, html {
    
 .bg-image {
   /* The image used */
-  background-image: ("lol.png");
+  background-image: ("lol.jpeg");
   
   /* Add the blur effect */
   filter: blur(8px);
@@ -48,8 +48,7 @@ body, html {
   text-align: center;
 }
    .download {
-   colo: white;
-      
+   color: white   
    }
 </style>
 </head>
