--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body, html {
    
 .bg-image {
   /* The image used */
-  background-image: ("lol.jpeg");
+  background-image: ("lol.png");
   
   /* Add the blur effect */
   filter: blur(8px);
