--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body, html {
    
 .bg-image {
   /* The image used */
-  background-image: ("lol.png");
+  background-image: ("lol.jpeg");
   
   /* Add the blur effect */
   filter: blur(8px);
@@ -59,12 +59,7 @@ body, html {
   <h1 style="font-size:50px">Krnl</h1>
   <p>Download Krnl Today</p>
   <br>
-   <div class="download">
-        <a href="/Krnl/Krnl.exe" download>
-         <i class="fas fa-download"></i>
-                          </a>
-   </div>
-                                         </div>
+                   </div>
            
 </body>
 </html>
